--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,2 +1,2 @@
-• In ancient times, quotes were printed on scrolls and nothing would happen if you tapped on the parchment. In modern times, you can tap on a quoted reply and now the original message is highlighted after it scrolls.
-• We also updated the “Note to Self” chat so that it’s always included in the list of available recipients without having to search for your own name. Self-discovery can be hard, but finding yourself in Signal has never been easier.
+• En la antigüedad, las citas de los grandes pensadores se escribían en rollos de pergamino, y era un rollo encontrarlas. Por suerte, en los tiempos modernos puedes pulsar una respuesta citada y el mensaje original se resaltará para que puedas ubicarlo fácilmente.
+• También hemos actualizado el chat "Notas privadas" para que siempre aparezca en tu lista de destinatarios disponibles sin tener que buscar tu propio nombre. El proceso de autodescubrimiento puede resultar difícil, pero encontrarte en Signal nunca ha sido tan fácil.
