--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,2 +1,2 @@
-• In ancient times, quotes were printed on scrolls and nothing would happen if you tapped on the parchment. In modern times, you can tap on a quoted reply and now the original message is highlighted after it scrolls.
-• We also updated the “Note to Self” chat so that it’s always included in the list of available recipients without having to search for your own name. Self-discovery can be hard, but finding yourself in Signal has never been easier.
+• Ça vous arrive de vous demander comment les gens communiquaient dans l'Antiquité ? Difficile de suivre une conversation sur des parchemins... Aujourd'hui, sur Signal, quand vous appuyez sur une réponse à un message, l'écran défile jusqu'au message d'origine, qui s'affiche en surbrillance. De quoi y voir plus clair !
+• Plus besoin de saisir votre nom dans la barre de recherche pour trouver vos "Notes perso". Cette conversation apparaît maintenant dans la liste des destinataires. Apprendre à se connaître peut être difficile, mais se trouver sur Signal n'a jamais été aussi simple.
