--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,2 +1,2 @@
-• In ancient times, quotes were printed on scrolls and nothing would happen if you tapped on the parchment. In modern times, you can tap on a quoted reply and now the original message is highlighted after it scrolls.
-• We also updated the “Note to Self” chat so that it’s always included in the list of available recipients without having to search for your own name. Self-discovery can be hard, but finding yourself in Signal has never been easier.
+Mostantól rákoppinthatsz egy idézett válaszra, és a jobb láthatóság érdekében megjelenik az eredeti üzenet.
+Frissítettük a „Megjegyzés magamnak” csevegést is, így az mindig szerepel az elérhető címzettek listájában anélkül, hogy rá kellene keresned a saját nevedre.
