--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,2 +1,2 @@
-• In ancient times, quotes were printed on scrolls and nothing would happen if you tapped on the parchment. In modern times, you can tap on a quoted reply and now the original message is highlighted after it scrolls.
-• We also updated the “Note to Self” chat so that it’s always included in the list of available recipients without having to search for your own name. Self-discovery can be hard, but finding yourself in Signal has never been easier.
+• Når du trykker på et sitert svar, utheves den opprinnelige meldingen slik at den blir ekstra synlig.
+• Vi har også lagt til Notat til meg selv-samtalen i listen over mottakere, slik at du lett finner den uten å søke etter ditt eget navn.
