--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,2 +1,2 @@
-• In ancient times, quotes were printed on scrolls and nothing would happen if you tapped on the parchment. In modern times, you can tap on a quoted reply and now the original message is highlighted after it scrolls.
-• We also updated the “Note to Self” chat so that it’s always included in the list of available recipients without having to search for your own name. Self-discovery can be hard, but finding yourself in Signal has never been easier.
+• Nu kan du trycka på ett citerat svar så markeras det ursprungliga meddelandet för bättre synlighet.
+• Vi har också uppdaterat chatten Egen anteckning så att den alltid finns med i listan över tillgängliga mottagare utan att du behöver söka efter ditt eget namn.
