--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,2 +1,2 @@
-• In ancient times, quotes were printed on scrolls and nothing would happen if you tapped on the parchment. In modern times, you can tap on a quoted reply and now the original message is highlighted after it scrolls.
-• We also updated the “Note to Self” chat so that it’s always included in the list of available recipients without having to search for your own name. Self-discovery can be hard, but finding yourself in Signal has never been easier.
+• แชทสะดวกขึ้นอีกขั้น เพียงแตะที่ข้อความตอบกลับ ระบบก็จะไฮไลท์ข้อความต้นฉบับให้ทันที
+• ไม่ต้องมัวพิมพ์หาชื่อตัวเองอีกต่อไป เพราะเราปรับปรุงให้มีแชท “บันทึกส่วนตัว” รวมอยู่ด้วยเสมอในรายการผู้รับ
