--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,2 +1,2 @@
-• In ancient times, quotes were printed on scrolls and nothing would happen if you tapped on the parchment. In modern times, you can tap on a quoted reply and now the original message is highlighted after it scrolls.
-• We also updated the “Note to Self” chat so that it’s always included in the list of available recipients without having to search for your own name. Self-discovery can be hard, but finding yourself in Signal has never been easier.
+• Eski zamanlarda alıntılar parşömenlere basılırdı ve parşömene dokunursan hiçbir şey olmazdı. Artık alıntılanan bir yanıtın üzerine dokunabilirsin ve orijinal mesaj daha görünür olacak şekilde vurgulanır.
+• "Kendime Not" sohbetini de güncelledik böylece kendi adını aramak zorunda kalmadan her zaman mevcut alıcılar listesine dahil edilirsin. Signal'da kendini bulmak hiç bu kadar kolay olmamıştı.
